2005-08-18 Borut Razem <borutr@users.sourceforge.net>
  * [gplib] Allow forward and back slashes as directory delimiters.

2005-08-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.3 Released.
  * [gpasm] Added more arity checks to bit special instruction mnemonics.

2005-08-03 Raphael Neider <tecodev@users.sourceforge.net>
  * [gplink] Allow processor mismatch warning to be disabled.

2005-07-25 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Changed order of stack and cinit functions to fix bugs.

2005-07-02 Scott Dattalo <scott@dattalo.com>
  * [gpasm] Quoted strings can now be passed in a .direct directive.

2005-06-14 Alain Portal <aportal AT univ-montp2 DOT fr>
  * [man] Updated French man pages.

2005-05-26 Alain Portal <aportal AT univ-montp2 DOT fr>
  * [man] Updated French man pages.

2005-05-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Remove dead sections from the object files.
  * [gplink] Added default linker path to search paths.

2005-05-18 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Check for divide by zero on modulo operator.

2005-05-11 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpstrip] Allow multiple input files.

2005-05-07 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Generate dependency file.

2005-05-06 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpvo] Added symbol export feature.

2005-05-05 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.2 Released.
  * [gpal] Removed gpal until it reaches alpha status.
  * [libgputils] Fixed pointer bug in symbol removal function.
  * [gpasm] Use .org_{address} for ORG COFF section names.

2005-04-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpstrip] Added new utility.

2005-04-15 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.1 Released.
  * [gpasm] Generate an error if config is placed in the middle of section.